[gd_scene load_steps=10 format=3 uid="uid://c87810cnntt4i"]

[ext_resource type="PackedScene" path="res://UI/LoadingScreen.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bo7oso3slm23o" path="res://skybox/skybox_02.png" id="2_nr7la"]
[ext_resource type="AudioStream" uid="uid://cieibj1loloj2" path="res://sound/sounds/ambience/music/menu_music.wav" id="3"]
[ext_resource type="Theme" uid="uid://cnq43lwu6wk48" path="res://UI/themes/main_menu_theme.tres" id="4"]
[ext_resource type="Script" path="res://scenes/Menu.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://cf510hosm884a" path="res://UI/Options.tscn" id="7"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_ywwob"]
panorama = ExtResource("2_nr7la")
filter = false

[sub_resource type="Sky" id="Sky_v6lxn"]
sky_material = SubResource("PanoramaSkyMaterial_ywwob")

[sub_resource type="Environment" id="2"]
background_mode = 2
sky = SubResource("Sky_v6lxn")
ambient_light_color = Color(1, 1, 1, 1)

[node name="Menu" type="Node3D"]
script = ExtResource("5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("2")

[node name="Lights" type="Node3D" parent="."]

[node name="Sounds" type="Node3D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3")
autoplay = true
bus = &"Music"

[node name="Ambience" type="AudioStreamPlayer" parent="Sounds"]
bus = &"SoundFX"

[node name="Camera3D" type="Camera3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -79.0
offset_right = 115.0
offset_bottom = 79.0
theme = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Options" parent="CanvasLayer" instance=ExtResource("7")]
visible = false
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingScreen" parent="CanvasLayer" instance=ExtResource("2")]
visible = false
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2
tips = Array[String](["tumors produce rot over time. destroy them", "cultists can create a circle of blood by pressing the Z key", "you can harvest a resource like a tree or boulder by hitting it"])

[connection signal="button_down" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
